# easier-openai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_file  wassup.py
.github/scripts/: auto_fix_on_issue.py
.github/workflows/: auto_fix_on_issue.yml  auto_pr.yml  auto_pr_review.yml  main.yml  make_pr.yml  pr_review.yml  securityissues.yml  slack-issue-notify.yml
Easy-gpt/: __init__.py  assistant.py  tempCodeRunnerFile.py
easier_aai/: Images.py  assistant.py  decorators.py  gemini_models.pyi  list_gemini_models.py
easier_ai/: Images.py  assistant.py  gemini_models.py  gemini_models.pyi
easier_openai/: Images.py  Openai_Images.py  __init__.py  assistant.py  assistant.pyi  decorators.py  gemini_models.pyi  models.py
examples/: chatbot.py  function_calling.py  streaming.py  voice_assistant.py
openai_wrapper/: __init__.py  assistant.py
tests/: gemini_models.py  main.py  realtime.py  test.md  test_file_search.py  test_function_calling.py  write_realtiem.py
